Update to new template.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
     "commands": [
         {
             "match": "\\.typ$",
-            "cmd": "typst main.typ"
+            "cmd": "typst compile main.typ"
         }]
-    }
+    },
+    "typst-lsp.exportPdf": "never"
 }
